64-bit corrections to parameters to OnUpdateInt Bug #20994 (Dave) @64-bit corrections to parameters to OnUpdateInt Bug #20994 (Dave)